WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226217
Loading WebM hangs if server sends only small amount of data
https://bugs.webkit.org/show_bug.cgi?id=226217
Summary
Loading WebM hangs if server sends only small amount of data
Kimmo Kinnunen
Reported
2021-05-25 04:37:40 PDT
Loading WebM hangs if server sends only small amount of data If the data is less than the initial metadata, interacting with the media player will hang the browser. There are various synchronous queries in the WebM format reader that cannot be answered synchronously.
Attachments
Patch
(3.65 KB, patch)
2021-05-25 04:47 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(12.20 KB, patch)
2021-06-24 21:13 PDT
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(12.21 KB, patch)
2021-06-24 21:18 PDT
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(12.71 KB, patch)
2021-06-24 21:26 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(15.16 KB, patch)
2021-06-25 08:41 PDT
,
Jer Noble
eric.carlson
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(17.90 KB, patch)
2021-06-25 15:28 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(17.74 KB, patch)
2021-06-25 15:33 PDT
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(17.42 KB, patch)
2021-06-28 09:40 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(17.50 KB, patch)
2021-06-28 10:21 PDT
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(17.51 KB, patch)
2021-06-28 14:46 PDT
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(8)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2021-05-25 04:47:07 PDT
Created
attachment 429642
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2021-06-01 04:38:16 PDT
<
rdar://problem/78709010
>
Jer Noble
Comment 3
2021-06-24 21:13:09 PDT
Created
attachment 432232
[details]
Patch
Jer Noble
Comment 4
2021-06-24 21:18:08 PDT
Created
attachment 432233
[details]
Patch
Jer Noble
Comment 5
2021-06-24 21:26:05 PDT
Created
attachment 432234
[details]
Patch
Jer Noble
Comment 6
2021-06-25 08:41:53 PDT
Created
attachment 432275
[details]
Patch
Jer Noble
Comment 7
2021-06-25 13:43:48 PDT
The AS debug failure is a test infrastructure problem. WebKitTestRunner uses an injected bundle to enable running the plugin format reader when it's not signed, but that code is only injected into the WebContent process, and not the GPU process.
Jer Noble
Comment 8
2021-06-25 15:28:58 PDT
Created
attachment 432298
[details]
Patch for landing
Jer Noble
Comment 9
2021-06-25 15:33:53 PDT
Created
attachment 432299
[details]
Patch for landing
Jer Noble
Comment 10
2021-06-28 09:40:08 PDT
Created
attachment 432400
[details]
Patch for landing
Jer Noble
Comment 11
2021-06-28 10:21:20 PDT
Created
attachment 432406
[details]
Patch for landing
Jer Noble
Comment 12
2021-06-28 14:46:59 PDT
Created
attachment 432424
[details]
Patch for landing
Jer Noble
Comment 13
2021-06-28 16:05:54 PDT
<
rdar://78622569
>
EWS
Comment 14
2021-06-28 16:06:12 PDT
NOBODY Eric Carlson found in /Volumes/Data/worker/Commit-Queue/build/LayoutTests/ChangeLog does not appear to be a valid reviewer according to contributors.json. /Volumes/Data/worker/Commit-Queue/build/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Maciej Stachowiak
Comment 15
2021-06-28 20:18:41 PDT
LayoutTests/ChangeLog is the one that mistakenly says NOBODY Eric Carlson.
Jer Noble
Comment 16
2021-06-29 10:12:59 PDT
Committed
r279375
(
239241@main
): <
https://commits.webkit.org/239241@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug