Loading WebM hangs if server sends only small amount of data https://bugs.webkit.org/show_bug.cgi?id=226217 <rdar://problem/78709010>

Source/WebCore/PAL:

Reviewed by Eric Carlson.

* pal/cf/CoreMediaSoftLink.cpp:
* pal/cf/CoreMediaSoftLink.h:
* pal/spi/cf/CoreMediaSPI.h:

Source/WebKit:

Reviewed by Eric Carlson.

Test: http/tests/media/video-webm-stall.html

Adopt FigThread{Un,}RegisterAbortAction() when blocking against track parsing.

CoreMedia will attempt to abort reads during AVPlayer teardown, but because the parsing
thread is blocked on a Condition variable in WebKit code, the abort request has no effect.
Adopt methods from CoreMedia to run code during an abort request, and wrap these calls in a
stack-based object. The new AbortAction object takes a Condition variable to notify during
an abort, and its aborted() state can be queried by the Condition's predicate.

Drive-by Fix: enable running an unsigned MTFormatReaderPlugin in the GPU process for
engineering builds.

* Configurations/BaseTarget.xcconfig:
* GPUProcess/mac/GPUProcessMac.mm:
(WebKit::GPUProcess::initializeProcess):
* Shared/mac/MediaFormatReader/MediaFormatReader.cpp:
(WebKit::AbortAction::AbortAction):
(WebKit::AbortAction::~AbortAction):
(WebKit::AbortAction::aborted const):
(WebKit::AbortAction::action):
(WebKit::MediaFormatReader::copyProperty):
(WebKit::MediaFormatReader::copyTrackArray):

LayoutTests:

Reviewed by NOBODY Eric Carlson.

* http/tests/media/resources/.htaccess: Added.
* http/tests/media/video-webm-stall-expected.txt: Added.
* http/tests/media/video-webm-stall.html: Added.

Canonical link: https://commits.webkit.org/239241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279375 268f45cc-cd09-0410-ab3c-d52691b4dbfc