Source/WebKit/GPUProcess/mac/GPUProcessMac.mm
@@ -49,6 +49,12 @@ void GPUProcess::initializeProcess(const AuxiliaryProcessInitializationParameter
     ASSERT_UNUSED(error, error == noErr);
 #endif
 
+#if ENABLE(LOWER_FORMATREADERBUNDLE_CODESIGNING_REQUIREMENTS)
+    // For testing in engineering builds, allow CoreMedia to load the MediaFormatReader bundle no matter its code signature.
+    auto userDefaults = adoptNS([[NSUserDefaults alloc] initWithSuiteName:@"com.apple.coremedia"]);
+    [userDefaults registerDefaults:@{ @"pluginformatreader_unsigned": @YES }];
+#endif
+
     launchServicesCheckIn();
 }
 
